--- a/integration-templates/evaluagent/nango.yaml
+++ b/integration-templates/evaluagent/nango.yaml
@@ -7,21 +7,21 @@ integrations:
                 description: |
                     Fetches a list of users from evaluagent
                 sync_type: full
-                endpoint: /evaluagent/users
+                endpoint: GET /evaluagent/users
             groups:
                 runs: every day
                 output: EvaluAgentGroup
                 description: |
                     Fetches a list of groups from evaluagent
                 sync_type: full
-                endpoint: /evaluagent/groups
+                endpoint: GET /evaluagent/groups
             roles:
                 runs: every day
                 output: EvaluAgentRole
                 description: |
                     Fetches a list of roles from evaluagent
                 sync_type: full
-                endpoint: /evaluagent/roles
+                endpoint: GET /evaluagent/roles
 models:
     EvaluAgentGroup:
         id: string
