--- a/integration-templates/ashby/nango.yaml
+++ b/integration-templates/ashby/nango.yaml
@@ -11,7 +11,7 @@ integrations:
                         We need to save a candidatelastsyncToken to track and update candidates' synchronizations
                     scopes: candidatelastsyncToken
                 sync_type: incremental
-                endpoint: /ashby/candidates
+                endpoint: GET /ashby/candidates
             jobs:
                 runs: every hour
                 output: AshbyJob
@@ -22,7 +22,7 @@ integrations:
                         We need to save a jobslastsyncToken to track and update jobs' synchronizations
                     scopes: jobslastsyncToken
                 sync_type: incremental
-                endpoint: /ashby/jobs
+                endpoint: GET /ashby/jobs
         actions:
             create-application:
                 output: AshbyCreateApplicationResponse
