--- a/integration-templates/google/nango.yaml
+++ b/integration-templates/google/nango.yaml
@@ -6,7 +6,7 @@ integrations:
                 track_deletes: true
                 output: OrganizationalUnit
                 sync_type: full
-                endpoint: /google/workspace-org-unit
+                endpoint: GET /google/workspace-org-unit
                 scopes:
                     - https://www.googleapis.com/auth/admin.directory.orgunit.readonly
                     - https://www.googleapis.com/auth/admin.directory.user.readonly
@@ -14,12 +14,12 @@ integrations:
                 runs: every hour
                 output: User
                 sync_type: full
-                endpoint: /google/workspace-users
+                endpoint: GET /google/workspace-users
             workspace-user-access-tokens:
                 runs: every hour
                 output: GoogleWorkspaceUserToken
                 sync_type: full
-                endpoint: /google/workspace-user-access-tokens
+                endpoint: GET /google/workspace-user-access-tokens
                 scopes:
                     - https://www.googleapis.com/auth/admin.directory.user.readonly
                     - https://www.googleapis.com/auth/admin.directory.user.security
