--- a/integration-templates/greenhouse-basic/nango.yaml
+++ b/integration-templates/greenhouse-basic/nango.yaml
@@ -7,21 +7,21 @@ integrations:
                     Fetches a list of all organization's applications from greenhouse
                 output: GreenhouseApplication
                 sync_type: incremental
-                endpoint: /greenhouse-basic/applications
+                endpoint: GET /greenhouse-basic/applications
             candidates:
                 runs: every 6 hours
                 description: |
                     Fetches a list of all organization's candidates from greenhouse
                 output: GreenhouseCandidate
                 sync_type: incremental
-                endpoint: /greenhouse-basic/candidates
+                endpoint: GET /greenhouse-basic/candidates
             jobs:
                 runs: every 6 hours
                 description: |
                     Fetches a list of all organization's jobs from greenhouse
                 output: GreenhouseJob
                 sync_type: incremental
-                endpoint: /greenhouse-basic/jobs
+                endpoint: GET /greenhouse-basic/jobs
 models:
     GreenhouseApplication:
         id: string
