--- a/integration-templates/kustomer/nango.yaml
+++ b/integration-templates/kustomer/nango.yaml
@@ -7,7 +7,7 @@ integrations:
                     Retrieves a paginated list of conversations for the organization
                 output: KustomerConversation
                 sync_type: full
-                endpoint: /kustomer/conversations
+                endpoint: GET /kustomer/conversations
                 scopes:
                     - org.user.conversation.read
                     - org.permission.conversation.read
