--- a/integration-templates/teamtailor/nango.yaml
+++ b/integration-templates/teamtailor/nango.yaml
@@ -7,7 +7,7 @@ integrations:
                     Fetches a list of all candidates from your teamtailor account.
                 output: TeamtailorCandidate
                 sync_type: full
-                endpoint: /teamtailor/candidates
+                endpoint: GET /teamtailor/candidates
                 scopes:
                     - Admin
 models:
