--- a/integration-templates/wildix-pbx/nango.yaml
+++ b/integration-templates/wildix-pbx/nango.yaml
@@ -7,7 +7,7 @@ integrations:
                     Fetches a list of users from PBX
                 output: WildixPbxColleague
                 sync_type: full
-                endpoint: /wildix-pbx/colleagues
+                endpoint: GET /wildix-pbx/colleagues
 models:
     WildixPbxColleague:
         id: string
