--- a/integration-templates/zoho-crm/nango.yaml
+++ b/integration-templates/zoho-crm/nango.yaml
@@ -8,7 +8,7 @@ integrations:
                     Fetches a list of accounts from zoho crm
                 output: ZohoCRMAccount
                 sync_type: incremental
-                endpoint: /zoho-crm/accounts
+                endpoint: GET /zoho-crm/accounts
                 scopes:
                     - ZohoCRM.modules.accounts.READ
             contacts:
@@ -18,7 +18,7 @@ integrations:
                     Fetches a list of contacts from zoho crm
                 output: ZohoCRMContact
                 sync_type: incremental
-                endpoint: /zoho-crm/contacts
+                endpoint: GET /zoho-crm/contacts
                 scopes:
                     - ZohoCRM.modules.contacts.READ
             deals:
@@ -28,7 +28,7 @@ integrations:
                     Fetches a list of deals/opportunities from zoho crm
                 output: ZohoCRMDeal
                 sync_type: incremental
-                endpoint: /zoho-crm/deals
+                endpoint: GET /zoho-crm/deals
                 scopes:
                     - ZohoCRM.modules.deals.READ
 models:
