--- a/integration-templates/zoho-mail/nango.yaml
+++ b/integration-templates/zoho-mail/nango.yaml
@@ -7,7 +7,7 @@ integrations:
                     Fetches a list of all your personal tasks in Zoho mail
                 output: ZohoMailTask
                 sync_type: full
-                endpoint: /zoho-mail/tasks
+                endpoint: GET /zoho-mail/tasks
                 scopes:
                     - ZohoMail.tasks.READ
             emails:
@@ -16,7 +16,7 @@ integrations:
                     Fetches a list of all your account's emails in Zoho mail
                 output: ZohoMailEmail
                 sync_type: full
-                endpoint: /zoho-mail/emails
+                endpoint: GET /zoho-mail/emails
                 scopes:
                     - ZohoMail.messages.READ
         actions:
