--- a/integration-templates/zoho-mail/nango.yaml
+++ b/integration-templates/zoho-mail/nango.yaml
@@ -72,6 +72,7 @@ models:
         depUniqId: string
         status: string
     ZohoMailEmail:
+        id: string
         summary: string
         sentDateInGMT: string
         calendarType: number
