--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -3113,6 +3113,7 @@ integrations:
                 depUniqId: string
                 status: string
             ZohoMailEmail:
+                id: string
                 summary: string
                 sentDateInGMT: string
                 calendarType: number
