--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -187,6 +187,8 @@ asana:
         grant_type: refresh_token
     proxy:
         base_url: https://app.asana.com
+        retry:
+            after: 'Retry-After'
         paginate:
             type: cursor
             cursor_path_in_response: next_page.offset
