feat(integrations): add support for unanet (#2330)
## Describe your changes

- Add support for unanet
- Add `connectionConfig` to proxy headers for basic-auth

## Issue ticket number and link

[EXT-82](https://linear.app/nango/issue/EXT-82/add-support-for-unanet-called-cosential-compass-api-in-docs)
## Test
This provider has been used successfully in local development to connect
to `unanet` after authorizing using Nango. The documentation update was
reviewed using `npm run docs` and verifying on localhost.

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -2583,6 +2583,21 @@ uber:
     proxy:
         base_url: https://api.uber.com
     docs: https://docs.nango.dev/integrations/all/uber
+unanet:
+    categories:
+        - crm
+        - erp
+        - accounting
+    auth_mode: BASIC
+    proxy:
+        headers:
+            x-compass-firm-id: ${connectionConfig.firmId}
+            x-compass-api-key: ${connectionConfig.apiKey}
+        base_url: https://compass.cosential.com
+        verification:
+            method: GET
+            endpoint: /api/projects
+    docs: https://docs.nango.dev/integrations/all/unanet
 unauthenticated:
     auth_mode: NONE
     docs: https://docs.nango.dev/integrations/overview
